M9.2 preserve nullable JSON values in domain maps