@@ -1,6 +1,8 @@
 package com.jaruizes.processplatform.domain.model;
 
 import java.time.Instant;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -20,8 +22,8 @@ public record ProcessDefinition(
         Instant activatedAt) {
 
     public ProcessDefinition {
-        inputSchema = inputSchema == null ? Map.of() : Map.copyOf(inputSchema);
-        outputSchema = outputSchema == null ? Map.of() : Map.copyOf(outputSchema);
+        inputSchema = inputSchema == null ? Map.of() : Collections.unmodifiableMap(new LinkedHashMap<>(inputSchema));
+        outputSchema = outputSchema == null ? Map.of() : Collections.unmodifiableMap(new LinkedHashMap<>(outputSchema));
         steps = steps == null ? List.of() : List.copyOf(steps);
     }
 }
